[package]
name = "solana-txv1"
version.workspace = true
edition.workspace = true

[dependencies]
rand = "0.8"
solana-hash = { workspace = true }
solana-keypair = { workspace = true }
solana-pubkey = { workspace = true }
solana-signature = { workspace = true }
solana-signer = { workspace = true }
solana-transaction = { workspace = true }

[dev-dependencies]
solana-system-interface = { workspace = true, features = ["bincode"] }
solana-transaction = { workspace = true, features = ["bincode"] }

[lints]
workspace = true
